--- a/HelpDesk/css/style.css
+++ b/HelpDesk/css/style.css
@@ -1,13 +1,25 @@
+body {
+    font-family: Arial;
+}
+
 .form-group {
     text-align: center;
 }
 
 .jumbotron {
-    box-shadow: 1px 4px 20px 2px black;
+    box-shadow: 1px 2px 20px 1px black;
+    background-color: antiquewhite;
 }
 
-// body {
-    background-image: url("../imagens/background.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+h2 {
+    font-family: Impact;
+}
+
+.navbar {
+    margin-bottom: 0;
+    border-radius: 0;
+}
+
+.btns {
+    text-align: center;
 }
