--- a/HelpDesk/css/style.css
+++ b/HelpDesk/css/style.css
@@ -23,3 +23,9 @@ h2 {
 .btns {
     text-align: center;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
