--- a/HelpDesk/views/index.html
+++ b/HelpDesk/views/index.html
@@ -104,8 +104,8 @@
 					</div>
 					<div class="form-group col-sm-2">
 						<label>Device</label> <br>
-						<select class="form-control" ng-required="true">
-							<option name="device" ng-model="cadastro.device" disabled selected value> Selecione uma opção </option>
+						<select class="form-control" name="device" ng-model="cadastro.device" ng-required="true">
+							<option disabled selected value> Selecione uma opção </option>
 							<option>iPhone</option>
 							<option>iPad</option>
 							<option>Smartphone</option>
@@ -177,7 +177,7 @@
 				<br>
 				<div class="btns">
 					<button type="submit" class="btn btn-success" ng-disabled="!formulario.$valid">Enviar</button>
-					<button type="reset" class="btn btn-primary">Limpar</button>
+					<button type="reset" class="btn btn-primary" ng-click="refresh()">Limpar</button>
 				</div>
 			</form>
 		</div>
