Colocando texto de validação dos campos ID FreshDesk e ID Aluno

--- a/HelpDesk/css/style.css
+++ b/HelpDesk/css/style.css
@@ -11,13 +11,21 @@ body {
   font-family: Arial;
 }
 
+textarea {
+  resize: none;
+}
+
+.form-control {
+  font-size: 0.9em;
+}
+
 .form-group {
   text-align: center;
+  font-size: 1em;
 }
 
 .jumbotron {
   box-shadow: 1px 1px 20px 1px grey;
-  background-color: ;
 }
 
 h2 {
@@ -40,6 +48,9 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 #btnsubmit {
