--- a/HelpDesk/views/index.html
+++ b/HelpDesk/views/index.html
@@ -7,8 +7,8 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-	<script src="../js/controllers/form-controller.js"></script>
-	<link rel="stylesheet" href="../css/style.css">
+	<script src="../public/js/controllers/form-controller.js"></script>
+	<link rel="stylesheet" href="../public/css/style.css">
 	<title>HelpDesk</title>
 </head>
 <body ng-app="helpdesk" ng-controller="formController">
