--- a/HelpDesk/views/index.html
+++ b/HelpDesk/views/index.html
@@ -9,6 +9,7 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 	<script src="../public/js/controllers/form-controller.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script>
 	<link rel="stylesheet" href="../public/css/style.css">
 	<title>HelpDesk</title>
 </head>
@@ -140,7 +141,7 @@
 				</div>
 				<br>
 				<div class="row">
-					<div class="form-group col-sm-3">
+					<div class="form-group col-sm-2">
 						<label>Problema</label>
 						<br>
 						<select name="problema" ng-model="cadastro.problema" class="form-control" ng-required="true">
@@ -156,17 +157,41 @@
 							<option>XXXXXX</option>
 						</select>
 					</div>
-					<div class="form-group col-sm-3">
-						<label>ID FreshDesk</label>
-						<br>
-						<input type="number" name="idFreshdesk" ng-model="cadastro.idFreshdesk" class="form-control" ng-minlength="4" ng-maxlength="7">
+					<div class="form-group col-sm-2">
+						<label>ID FreshDesk</label> <br>
+ 						<input type="number" name="idFreshdesk" ng-model="idFreshdesk" class="form-control" ng-minlength="4" ng-maxlength="7">
+ 						<div ng-messages="formulario.idFreshdesk.$error" style="color:maroon" role="alert">
+ 							<div ng-message="minlength">Curto demais</div>
+ 							<div ng-message="maxlength">Longo demais</div>
+ 						</div>
 					</div>
-					<div class="form-group col-sm-3">
-						<label>ID Aluno</label>
-						<br>
-						<input type="number" name="idAluno" ng-model="cadastro.idAluno" class="form-control" ng-required="true" ng-minlength="4" ng-maxlength="7">
+					<div class="form-group col-sm-2">
+						<label>ID Aluno</label> <br>
+  						<input type="number" name="idAluno" ng-model="idAluno" class="form-control" type="text" ng-required="true" ng-minlength="4" ng-maxlength="7">
+							<div ng-messages="formulario.idAluno.$error" style="color:maroon" role="alert">
+							<div ng-message="minlength">Curto demais</div>
+							<div ng-message="maxlength">Longo demais</div>
+						</div>
 					</div>
-					<div class="form-group col-sm-3">
+					<div class="form-group col-sm-2">
+						<label>Recorrente?</label>
+						<br>
+						<select name="recorrente" ng-model="cadastro.recorrente" class="form-control" ng-required="true">
+							<option disabled selected value> Selecione uma opção </option>
+							<option>Sim</option>
+							<option>Não</option>
+						</select>
+					</div>
+					<div class="form-group col-sm-2">
+						<label>Abriu Demanda?</label>
+						<br>
+						<select name="abriuDemanda" ng-model="cadastro.abriuDemanda" class="form-control" ng-required="true">
+							<option disabled selected value> Selecione uma opção </option>
+							<option>Sim</option>
+							<option>Não</option>
+						</select>
+					</div>
+					<div class="form-group col-sm-2">
 						<label>Data</label>
 						<br>
 						<input name="data" ng-model="cadastro.data" class="form-control" type="date" ng-required="true">
