--- a/HelpDesk/public/css/style.css
+++ b/HelpDesk/public/css/style.css
@@ -1,20 +1,3 @@
-/* Small devices (tablets, 768px and up) */
-
-@media (min-width: @screen-sm-min) {
-    ...
-}
-
-/* Medium devices (desktops, 992px and up) */
-
-@media (min-width: @screen-md-min) {
-    ...
-}
-
-/* Large devices (large desktops, 1200px and up) */
-
-@media (min-width: @screen-lg-min) {
-    ...
-}
 body {
     font-family: Arial;
 }
@@ -56,4 +39,8 @@ input[type=number] {
 }
 .table-responsive, th {
     text-align: center;
+}
+
+.mensagem-validacao {
+  color: maroon;
 }
