--- a/HelpDesk/public/css/style.css
+++ b/HelpDesk/public/css/style.css
@@ -1,59 +1,49 @@
-/* Small devices (tablets, 768px and up) */
-
-@media (min-width: @screen-sm-min) {
-    ...
-}
-
-/* Medium devices (desktops, 992px and up) */
-
-@media (min-width: @screen-md-min) {
-    ...
-}
-
-/* Large devices (large desktops, 1200px and up) */
-
-@media (min-width: @screen-lg-min) {
-    ...
-}
 body {
-    font-family: Arial;
+  font-family: Arial;
 }
 textarea {
-    resize: none;
+  resize: none;
 }
 .form-control {
-    font-size: 0.9em;
+  font-size: 0.9em;
 }
+/* Tamanho da fonte dentro dos formulários */
 .form-group {
-    text-align: center;
-    font-size: 1em;
+  text-align: center;
+  font-size: 1em;
 }
 .jumbotron {
-    box-shadow: 1px 1px 20px 1px grey;
+  box-shadow: 1px 1px 20px 1px grey;
 }
 h2 {
-    font-family: Impact;
+  font-family: Impact;
 }
-h3 {
-    font-family: 'Roboto Condensed', sans-serif;
+p {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+.glyphicon-search {
+  font-size: 0.8em;
 }
 .navbar {
-    margin-bottom: 0;
-    border-radius: 0;
+  margin-bottom: 0;
+  border-radius: 0;
 }
 .btns {
-    text-align: center;
+  text-align: center;
 }
+/* Removendo os Spinners */
 input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
+/* Removendo os Spinners do Firefox */
 input[type=number] {
-    -moz-appearance: textfield;
+-moz-appearance: textfield;
 }
+/* botão OK da tela de consulta, espaçamento para o lado esquerdo */
 #btnsubmit {
-    margin-left: 10px;
+  margin-left: 10px;
 }
 .table-responsive, th {
-    text-align: center;
+  text-align: center;
 }
