--- a/HelpDesk/views/index.html
+++ b/HelpDesk/views/index.html
@@ -48,7 +48,7 @@
 	<div class="container">
 		<div class="jumbotron">
 			<form novalidate name="formulario" class="form" id="formulario" ng-submit="submitForm()"> <!-- Inicio do Fomulário -->
-				<div class="row">
+				<div class="row"> <!-- Inicio da linha -->
 					<h2>
 						Cadastro de Atendimento
 						<small class="text-muted">HelpDesk</small>
@@ -137,9 +137,9 @@
 							<option>Parcial</option>
 						</select>
 					</div>
-				</div>
+				</div> <!-- Fim da linha -->
 				<br>
-				<div class="row">
+				<div class="row"> <!-- Inicio da linha -->
 					<div class="form-group col-sm-2">
 						<label>Problema</label>
 						<br>
@@ -156,9 +156,9 @@
 							<option>XXXXXX</option>
 						</select>
 					</div>
-					<div class="form-group col-sm-2">
+					<div class="form-group has-error has-feedback col-sm-2">
 						<label>ID FreshDesk</label> <br>
- 						<input type="number" name="idFreshdesk" ng-model="idFreshdesk" class="form-control" ng-minlength="4" ng-maxlength="7">
+ 						<input type="number" name="idFreshdesk" ng-model="idFreshdesk" class="form-control" ng-minlength="4" ng-maxlength="7">						
  						<div ng-messages="formulario.idFreshdesk.$error" style="color:maroon" role="alert">
  							<div ng-message="minlength">Curto demais</div>
  							<div ng-message="maxlength">Longo demais</div>
@@ -195,8 +195,8 @@
 						<br>
 						<input name="data" ng-model="cadastro.data" class="form-control" type="date" ng-required="true">
 					</div>
-				</div>
-				<div class="row">
+				</div> <!-- Fim da linha -->
+				<div class="row"> <!-- Inicio da linha -->
 					<div class="form-group col-sm-4">
 						<label for="diagnostico">Diagnóstico</label>
 						<br>
@@ -212,7 +212,7 @@
 						<br>
 						<textarea name="observacao" ng-model="cadastro.observacao" class="form-control" rows="2" id="observacao" placeholder="Informações úteis sobre o atendimento"></textarea>
 					</div>
-				</div>
+				</div> <!-- Fim da linha -->
 				<br>
 				<div class="btns">
 					<button type="submit" class="btn btn-success" ng-disabled="!formulario.$valid">Enviar</button>
