Tela CONSULTA - melhorias na disposição dos elementos de pesquisa (ajustes visuais)

--- a/HelpDesk/public/css/style.css
+++ b/HelpDesk/public/css/style.css
@@ -45,6 +45,9 @@ input[type=number] {
   /*margin-left: 10px;*/
   width: 100%;
 }
+#container-consulta {
+  margin: 0 auto 0 auto;
+}
 .table-responsive, th {
   text-align: center;
 }
