Condicionando o campo idFreshdesk à seleção da Entrada

--- a/HelpDesk/views/consulta.html
+++ b/HelpDesk/views/consulta.html
@@ -9,7 +9,9 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://code.angularjs.org/1.5.8/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script>
+    <script src="../public/js/app.js"></script>
     <script src="../public/js/controllers/form-controller.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script>
     <link rel="stylesheet" href="../public/css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:700' rel='stylesheet' type='text/css'>
     <title>HelpDesk</title>
