Linkando as paginas Index e Consulta

--- a/HelpDesk/views/index.html
+++ b/HelpDesk/views/index.html
@@ -10,7 +10,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 	<script src="../public/js/app.js"></script>
 	<script src="../public/js/controllers/form-controller.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script> <!-- Script do Angular Messages -->
 	<link rel="stylesheet" href="../public/css/style.css">
 	<title>HelpDesk</title>
 </head>
@@ -28,11 +28,11 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Início</a></li>
+					<li class="active"><a href="index.html">Início</a></li>
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Menu <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Relatórios</a></li>
+							<li><a href="consulta.html">Relatórios</a></li>
 							<li><a href="#">Registros</a></li>
 							<li><a href="#">Editor</a></li>
 						</ul>
