--- a/HelpDesk/views/consulta.html
+++ b/HelpDesk/views/consulta.html
@@ -18,7 +18,7 @@
 </head>
 
 <body ng-app="helpdesk" ng-controller="formController">
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse"> <!-- Inicio da Navbar -->
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -30,11 +30,11 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Início</a></li>
+                    <li><a href="index.html">Início</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Menu <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Relatórios</a></li>
+                            <li  class="active"><a href="#">Relatórios</a></li>
                             <li><a href="#">Registros</a></li>
                             <li><a href="#">Editor</a></li>
                         </ul>
@@ -47,7 +47,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> <!-- Fim da Navbar -->
     <div class="container">
         <div class="jumbotron">
             <h2>
@@ -58,7 +58,7 @@
             <form class="form-horizontal" role="form">
                 <div class="form-group">
                     <p class="col-sm-2 control-label"><span class="glyphicon glyphicon-search"></span> Pesquisar</p>
-                    <div class="col-sm-4">&nbsp;</div>
+                    <div class="col-sm-4"></div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="idAluno">ID Aluno:</label>
