--- a/HelpDesk/views/consulta.html
+++ b/HelpDesk/views/consulta.html
@@ -9,10 +9,10 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://code.angularjs.org/1.5.8/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script>
-    <script src="../public/js/app.js"></script>
-    <script src="../public/js/controllers/form-controller.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/controllers/form-controller.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.8/angular-messages.min.js"></script>
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700" rel="stylesheet" type="text/css">
     <title>HelpDesk</title>
 </head>
