--- a/HelpDesk/views/index.html
+++ b/HelpDesk/views/index.html
@@ -15,7 +15,7 @@
 	<title>HelpDesk</title>
 </head>
 
-<body ng-controller="formController">
+<body ng-controller="formController as vm">
 	<nav class="navbar navbar-inverse"> <!-- Inicio da Navbar -->
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -53,7 +53,7 @@
 				<small class="text-muted">HelpDesk</small>
 			</h2>
 			<br>
-			<form novalidate name="formulario" class="form" id="formulario" ng-submit="submitForm()"> <!-- Inicio do Fomulário -->
+			<form novalidate name="formulario" class="form" id="formulario" ng-submit="vm.submitForm()"> <!-- Inicio do Fomulário -->
 				<div class="row">
 					<div class="form-group col-sm-2">
 						<label for="colaborador">Colaborador</label>
@@ -201,7 +201,7 @@
 				<br>
 				<div class="btns">
 					<button type="submit" class="btn btn-success" ng-disabled="!formulario.$valid">Enviar</button>
-					<button type="reset" class="btn btn-primary" ng-click="refresh()">Limpar</button>
+					<button type="reset" class="btn btn-primary" ng-click="vm.refresh()">Limpar</button>
 				</div>
 			</form> <!-- Fim do Fomulário -->
 		</div> <!-- Fim da Jumbotron -->
