--- a/HelpDesk/views/index.html
+++ b/HelpDesk/views/index.html
@@ -58,7 +58,7 @@
 					<div class="form-group col-sm-2">
 						<label for="colaborador">Colaborador</label>
 						<br>
-						<select name="colaborador" id="colaborador" ng-model="cadastro.colaborador" class="form-control" ng-required="true">
+						<select name="colaborador" id="colaborador" ng-model="vm.cadastro.colaborador" class="form-control" ng-required="true">
 							<option disabled selected value>Selecione uma opção</option>
 							<option>Adriano</option>
 							<option>Iana</option>
@@ -71,12 +71,12 @@
 					<div class="form-group col-sm-2">
 						<label for="data">Data</label>
 						<br>
-						<input name="data" id="data" ng-model="cadastro.data" class="form-control" type="date" ng-required="true">
+						<input name="data" id="data" ng-model="vm.cadastro.data" class="form-control" type="date" ng-required="true">
 					</div>
 					<div class="form-group col-sm-2">
 						<label for="idAluno">ID Aluno</label>
 						<br>
-						<input type="number" name="idAluno" id="idAluno" ng-model="cadastro.idAluno" class="form-control" ng-required="true" ng-minlength="4" ng-maxlength="7">
+						<input type="number" name="idAluno" id="idAluno" ng-model="vm.cadastro.idAluno" class="form-control" ng-required="true" ng-minlength="4" ng-maxlength="7">
 						<div class="mensagem-validacao" ng-messages="formulario.idAluno.$error" role="alert">
 							<div ng-message="minlength">Curto demais</div>
 							<div ng-message="maxlength">Longo demais</div>
@@ -85,7 +85,7 @@
 					<div class="form-group col-sm-2">
 						<label for="entrada">Entrada</label>
 						<br>
-						<select name="entrada" id="entrada" ng-model="cadastro.entrada" class="form-control" ng-required="true">
+						<select name="entrada" id="entrada" ng-model="vm.cadastro.entrada" class="form-control" ng-required="true">
 							<option disabled selected value> Selecione uma opção </option>
 							<option>Demanda</option>
 							<option>E-Mail</option>
@@ -97,7 +97,7 @@
 					<div class="form-group col-sm-2">
 						<label for="idFreshdesk">ID FreshDesk</label>
 						<br>
-						<input type="number" name="idFreshdesk" id="idFreshdesk" ng-model="cadastro.idFreshdesk" class="form-control" ng-minlength="4" ng-maxlength="7"  ng-disabled="cadastro.entrada != 'Fresh Desk'" ng-required="cadastro.entrada == 'Fresh Desk'">
+						<input type="number" name="idFreshdesk" id="idFreshdesk" ng-model="vm.cadastro.idFreshdesk" class="form-control" ng-minlength="4" ng-maxlength="7"  ng-disabled="cadastro.entrada != 'Fresh Desk'" ng-required="cadastro.entrada == 'Fresh Desk'">
 						<div class="mensagem-validacao" ng-messages="formulario.idFreshdesk.$error" role="alert">
 							<div ng-message="minlength">Curto demais</div>
 							<div ng-message="maxlength">Longo demais</div>
@@ -106,7 +106,7 @@
 					<div class="form-group col-sm-2">
 						<label for="aplicacao">Aplicação</label>
 						<br>
-						<select name="aplicacao" id="aplicacao" ng-model="cadastro.aplicacao" class="form-control" ng-required="true">
+						<select name="aplicacao" id="aplicacao" ng-model="vm.cadastro.aplicacao" class="form-control" ng-required="true">
 							<option disabled selected value>Selecione uma opção</option>
 							<option>ÁREA RESTRITA</option>
 							<option>CONCURSOS</option>
@@ -126,7 +126,7 @@
 					<div class="form-group col-sm-2">
 						<label for="device">Device</label>
 						<br>
-						<select class="form-control" name="device" id="device" ng-model="cadastro.device" ng-required="true">
+						<select class="form-control" name="device" id="device" ng-model="vm.cadastro.device" ng-required="true">
 							<option disabled selected value>Selecione uma opção</option>
 							<option>Computador Mac</option>
 							<option>Computador Windows</option>
@@ -141,12 +141,12 @@
 					<div class="form-group col-sm-2">
 						<label for="problema">Problema</label>
 						<br>
-						<input type="text" name="problema" id="problema" ng-model="cadastro.problema" class="form-control" ng-required="true" ng-minlenght="4" ng-maxlenght="255">
+						<input type="text" name="problema" id="problema" ng-model="vm.cadastro.problema" class="form-control" ng-required="true" ng-minlenght="4" ng-maxlenght="255">
 					</div>
 					<div class="form-group col-sm-2">
 						<label for="recorrente">Recorrente?</label>
 						<br>
-						<select name="recorrente" id="recorrente" ng-model="cadastro.recorrente" class="form-control" ng-required="true">
+						<select name="recorrente" id="recorrente" ng-model="vm.cadastro.recorrente" class="form-control" ng-required="true">
 							<option disabled selected value>Selecione uma opção</option>
 							<option>Sim</option>
 							<option>Não</option>
@@ -155,7 +155,7 @@
 					<div class="form-group col-sm-2">
 						<label for="origem">Origem</label>
 						<br>
-						<select name="origem" id="origem" ng-model="cadastro.origem" class="form-control" ng-required="true">
+						<select name="origem" id="origem" ng-model="vm.cadastro.origem" class="form-control" ng-required="true">
 							<option disabled selected value>Selecione uma opção</option>
 							<option>Aluno</option>
 							<option>MEDGRUPO</option>
@@ -164,7 +164,7 @@
 					<div class="form-group col-sm-2">
 						<label for="abriuDemanda">Abriu Demanda?</label>
 						<br>
-						<select name="abriuDemanda" id="abriuDemanda" ng-model="cadastro.abriuDemanda" class="form-control" ng-required="true">
+						<select name="abriuDemanda" id="abriuDemanda" ng-model="vm.cadastro.abriuDemanda" class="form-control" ng-required="true">
 							<option disabled selected value>Selecione uma opção</option>
 							<option>Sim</option>
 							<option>Não</option>
@@ -173,7 +173,7 @@
 					<div class="form-group col-sm-2">
 						<label for="status">Status</label>
 						<br>
-						<select name="status" id="status" ng-model="cadastro.status" class="form-control" ng-required="true">
+						<select name="status" id="status" ng-model="vm.cadastro.status" class="form-control" ng-required="true">
 							<option disabled selected value>Selecione uma opção</option>
 							<option>Solucionado</option>
 							<option>Pendente</option>
@@ -185,23 +185,23 @@
 					<div class="form-group col-sm-4">
 						<label for="diagnostico">Diagnóstico</label>
 						<br>
-						<textarea name="diagnostico" ng-model="cadastro.diagnostico" class="form-control" rows="2" id="diagnostico" placeholder="Razão de ter ocorrido o problema (por que esse problema ocorreu?)" ng-required="true"></textarea>
+						<textarea name="diagnostico" ng-model="vm.cadastro.diagnostico" class="form-control" rows="2" id="diagnostico" placeholder="Razão de ter ocorrido o problema (por que esse problema ocorreu?)" ng-required="true"></textarea>
 					</div>
 					<div class="form-group col-sm-4">
 						<label for="resposta">Resposta</label>
 						<br>
-						<textarea name="resposta" ng-model="cadastro.resposta" class="form-control" rows="2" id="resposta" placeholder="Sua solução ou resposta para o aluno" ng-required="true"></textarea>
+						<textarea name="resposta" ng-model="vm.cadastro.resposta" class="form-control" rows="2" id="resposta" placeholder="Sua solução ou resposta para o aluno" ng-required="true"></textarea>
 					</div>
 					<div class="form-group col-sm-4">
 						<label for="observacao">Observações</label>
 						<br>
-						<textarea name="observacao" ng-model="cadastro.observacao" class="form-control" rows="2" id="observacao" placeholder="Informações adicionais sobre o atendimento"></textarea>
+						<textarea name="observacao" ng-model="vm.cadastro.observacao" class="form-control" rows="2" id="observacao" placeholder="Informações adicionais sobre o atendimento"></textarea>
 					</div>
 				</div> <!-- Fim da linha -->
 				<br>
 				<div class="btns">
 					<button type="submit" class="btn btn-success" ng-disabled="!formulario.$valid">Enviar</button>
-					<button type="reset" class="btn btn-primary" ng-click="vm.refresh()">Limpar</button>
+					<button type="reset" class="btn btn-primary" ng-click="vm.limpaCampos()">Limpar</button>
 				</div>
 			</form> <!-- Fim do Fomulário -->
 		</div> <!-- Fim da Jumbotron -->
