--- a/HelpDesk/public/css/style.css
+++ b/HelpDesk/public/css/style.css
@@ -7,6 +7,11 @@ textarea {
 .form-control {
   font-size: 0.9em;
 }
+/* borda vermelha na box quando não preenche */
+.alteraFocoErro {
+  border-color: #FF0000;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+}
 /* Tamanho da fonte dentro dos formulários */
 .form-group {
   text-align: center;
